Dropping a file in a WKView (WebKit2) doesn't load the file. https://bugs.webkit.org/show_bug.cgi?id=58842 <rdar://problem/8514409>

Reviewed by Maciej Stachowiak.

The URL string for the file contains an extra %00 at the end
that causes the network framework to fail to load the file.

* platform/win/ClipboardUtilitiesWin.cpp:
(WebCore::getURL):



Canonical link: https://commits.webkit.org/73943@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84203 268f45cc-cd09-0410-ab3c-d52691b4dbfc